# LLMEffect

./: .gitignore  LICENSE  README.md  pyproject.toml  run_demo.sh
eval/: .gitignore  repos.json  results.md  run.py
examples/: pii_in_prompt.py  safe_agent_loop.py  safe_text_to_sql.py  secret_in_prompt.py  single_bound_agent_loop.py  unbounded_agent_loop.py  unsafe_text_to_sql.py  unvalidated_shell.py
llmeffect/: __init__.py  analyzer.py  cli.py  labels.py  patterns.py  violations.py
tests/: test_examples.py  test_labels.py  test_loops.py  test_typestate.py
