[project]
name = "llmeffect"
version = "0.1.0"
description = "Static analyzer for LLM-integrated Python programs."
requires-python = ">=3.10"
dependencies = []

[project.scripts]
llmeffect = "llmeffect.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["llmeffect"]
